<resources>
    <string name="app_name">Crossover Crusher</string>

    <string name="button_start">New Game</string>
    <string name="button_hi_scores">Hi-Scores</string>
    <string name="button_quit">Quit</string>
    <string name="button_resume">Resume</string>
    <string name="button_back">Back</string>
    <string name="button_restart">Restart</string>

    <string name="credits">Created by Joeri Vervaat</string>

    <string name="hi_score_all_time">All Time</string>
    <string name="hi_score_today">Today</string>
    <string name="hi_score_week">This Week</string>
    <string name="hi_score_month">This Month</string>

    <string name="pause_menu_title">Paused</string>
    <string name="lose_menu_title">You lost</string>
    <string name="submit_score">Submit score</string>
    <string name="back_to_main_menu">Main menu</string>
    <string name="score_text">score: </string>

    <string name="hi_score_name_property">Name</string>
    <string name="hi_score_score_property">Score</string>

    <string name="toast_added_hi_score">Hi-Score added!</string>

    <string name="input_name_text">Insert Name</string>
    <string name="input_name_text_error">Insert a valid name!</string>

    <string name="enable_internet">Please connect to the internet before using this functionality!</string>

    <string name="your_score"><font color="#ffbb00">Your score: </font></string>
    <string name="your_personal_best_score">Your best score: </string>
    <string name="no_scores_yet">No Hi-Scores yet!</string>

</resources>
